# restaurats-mod-manager

./: .gitattributes  .gitignore  Cargo.toml  Config.toml  PRIVACY_POLICY.md
.github/scripts/: update-version.ps1
.github/workflows/: build.yml  release.yml
assets/: README.txt
docs/: README.md
src/: bepinex.rs  config.rs  main.rs  poller.rs  types.rs
wix/: main.wxs
