[package]
name = "restaurats-mod-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "restaurats-mod-manager"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "glow",
    "default_fonts",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "7.0.0"
walkdir = "2.5.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
reqwest = { version = "0.13.1", features = ["json"] }
rfd = "0.17.2"
directories = "6.0.0"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
] }
open = "5.3.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.24.0"
zip = { version = "7.0.0", features = ["deflate"] }

[profile.release]
opt-level = 3

[features]
